# Adalora

./: .gitignore  COST_FREE_GUARANTEE.md  NLP_AdaLoRA-Bench.txt  PEFT_METHODS_GUIDE.md  README.md  ZERO_COST_REPORT.md  pyproject.toml  requirements.txt
configs/: adalora.yaml  default.yaml  full_finetune.yaml  ia3.yaml  prefix_tuning.yaml  prompt_tuning.yaml  smoke.yaml  tars.yaml  zero_shot.yaml
scripts/: run_benchmark.py
src/adalora_bench/: __main__.py  config.py  runner.py
src/adalora_bench/data/: __init__.py  tasks.py
src/adalora_bench/eval/: __init__.py  metrics.py  profiler.py
src/adalora_bench/models/: __init__.py  factory.py
src/adalora_bench/peft/: __init__.py  registry.py
src/adalora_bench/peft/methods/: base.py  impl.py
src/adalora_bench/tars/: __init__.py  scheduler.py
