[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adalora-bench"
version = "0.1.0"
description = "AdaLoRA-Bench: unified benchmark scaffold for PEFT methods on NLP tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]